Fixed alert spacing on register page

--- a/frontend/css/courses.css
+++ b/frontend/css/courses.css
@@ -503,7 +503,7 @@ pre {
   margin-right: auto;
   margin-left: auto; }
 
-.row {
+.row, #alert-div {
   display: flex;
   flex-wrap: wrap;
   margin-right: -15px;
@@ -6849,7 +6849,7 @@ button.bg-dark:focus {
 .text-right {
   text-align: right !important; }
 
-.text-center {
+.text-center, #alert-div {
   text-align: center !important; }
 
 @media (min-width: 576px) {
@@ -7140,7 +7140,8 @@ select.selectpicker {
   margin-left: 0; }
 
 .bootstrap-select.dropdown-menu-right, .bootstrap-select[class*="col-"].dropdown-menu-right,
-.row .bootstrap-select[class*="col-"].dropdown-menu-right {
+.row .bootstrap-select[class*="col-"].dropdown-menu-right,
+#alert-div .bootstrap-select[class*="col-"].dropdown-menu-right {
   float: right; }
 
 .form-inline .bootstrap-select,
