--- a/src/frontend/sass/main.sass
+++ b/src/frontend/sass/main.sass
@@ -16,4 +16,8 @@ a
 
 .bootstrap-select .dropdown-item.active, .dropdown-item:active, .nav-link.active
   background-color: $cyan !important
+
+#alert-div
+  @extend .row
+  @extend .text-center
 // border-color: #17a2b8
